Adding documentation and reformatting files.
