# OpenApi.yaml
@@ -11,56 +11,287 @@ info:
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
 paths:
   /user:
-    get:
+    post:
       tags:
         - user
-      summary: searches inventory
-      operationId: searchInventory
-      description: |
-        By passing in the appropriate options, you can search for
-        available inventory in the system
-      parameters:
-        - in: query
-          name: searchString
-          description: pass an optional search string for looking up inventory
-          required: false
-          schema:
-            type: string
-        - in: query
-          name: skip
-          description: number of records to skip for pagination
-          schema:
-            type: integer
-            format: int32
-            minimum: 0
+      summary: Creates a new User in the system.
+      operationId: addUser
+      description: Creates a new User in the system, please note that at this point the complex objects update is not supported (i.e. followers, followed, posts).
+      requestBody:
+        description: user to be created
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/user'
       responses:
         '200':
-          description: search results matching criteria
+          description: Created user
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/user'
         '400':
-          description: bad input parameter
-    post:
+          description: if there is any inconsistency with the user object definition
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+    get:
       tags:
         - user
-      summary: adds an inventory item
-      operationId: addInventory
-      description: Adds an item to the system
+      summary: Returns users in the system
+      operationId: getUsers
+      description: Returns the full list of users in the system
       responses:
-        '201':
-          description: item created
-        '400':
-          description: 'invalid input, object invalid'
-        '409':
-          description: an existing item already exists
+        '200':
+          description: List containing the users in the system
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/user'
+  /user/{userHandle}:
+    parameters:
+      - name: userHandle
+        in: path
+        description: user whose information you will be retrieving/modifying
+        required: true
+        schema:
+          type: string
+    put:
+      tags:
+        - user
+      summary: Modifies a specified user.
+      operationId: updateUser
+      description: Modifies a specified user with the values provided in an object, please note that at this point the complex objects update is not supported (i.e. followers, followed, posts)
       requestBody:
+        description: user object containing the values to be updated
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/user'
-        description: Inventory item to add
+      responses:
+        '200':
+          description: Modified user object
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user'
+        '400':
+          description: if there is any inconsistency with the user object definition or if the handle is empty or null
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+        '404':
+          description: Unexistant user handle sent
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+    get:
+      tags:
+        - user
+      summary: Retrieves a user details.
+      operationId: getUserById
+      description: Retrieves a user details given its handle.
+      responses:
+        '200':
+          description: User object containing the requested user.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user'
+        '400':
+          description: if the handle is empty or null
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+        '404':
+          description: Unexistant user handle sent
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+  /user/{userHandle}/timeline:
+    parameters:
+      - name: userHandle
+        in: path
+        description: user whose information you will be retrieving
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - posts
+      parameters:
+        - name: reverseOrder
+          in: query
+          description: false to retrieve the posts in chronological order, true to retrieve them in inverse chronological order, defaults to true
+          required: false
+          schema:
+            type: boolean
+            default: true
+      summary: Get posts made by the followed users.
+      operationId: getUserTimeline
+      description: Get the compilation of all the posts made by the users being followed by the user shoe handle is specified in the url.
+      responses:
+        '200':
+          description: List of posts sorted according to what was specified.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/post'
+        '400':
+          description: if the handle is empty or null
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+        '404':
+          description: Unexistant user handle sent
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+  /user/{userHandle}/followed:
+    parameters:
+      - name: userHandle
+        in: path
+        description: user whose information you will be retrieving/modifying
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - followers
+      summary: Retrieves the list of users being followed.
+      operationId: getFollowedUsers
+      description: Retrieves the list of users being followed by the user whose handle is specified in the url.
+      responses:
+        '200':
+          description: List of users being followed by the user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/user'
+        '400':
+          description: if the handle is empty or null
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+        '404':
+          description: Unexistant user handle sent
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+    post:
+      tags:
+        - followers
+      summary: Adds a user to the followed list.
+      operationId: addFollowedUser
+      description: Adds the received user to the followed list of the user specified in the url.
+      requestBody:
+        description: user to be followed, please note that the only attribute to be taking into account in the request is the user handle.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/user'
+      responses:
+        '200':
+          description: User object whose followed list was being modified
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user'
+        '400':
+          description: if the handle is empty or null
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+        '404':
+          description: if the provided handle does not correspond to any user on the system or if the sent user to be followed does not match any user in the system
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+  /user/{userHandle}/followed/{followedUserHandle}:
+    parameters:
+      - name: userHandle
+        in: path
+        description: user whose information you will be retrieving/modifying
+        required: true
+        schema:
+          type: string
+      - name: followedUserHandle
+        in: path
+        description: user that will be removed from the followed list
+        required: true
+        schema:
+          type: string
+    delete:
+      tags:
+        - followers
+      summary: Unfollows a user.
+      operationId: removeFollowedUser
+      description: Remove a specified user from the followed list of another specified user.
+      responses:
+        '204':
+          description: User removed from the followed list
+        '400':
+          description: if the handle is empty or null
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+        '404':
+          description: if the provided handle does not correspond to any user on the system
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+  /user/{userHandle}/followers:
+    parameters:
+      - name: userHandle
+        in: path
+        description: user whose information you will be retrieving
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - followers
+      summary: Retrieve the list of followers.
+      operationId: getFollowers
+      description: Retrieve the list of followers for the specified user.
+      responses:
+        '200':
+          description: List of users that are following the specified user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user'
+        '400':
+          description: if the handle is empty or null
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
+        '404':
+          description: if the provided handle does not correspond to any user on the system
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/apierror'
   /user/{userHandle}/post/:
     parameters:
     - name: userHandle
@@ -72,9 +303,9 @@ paths:
     post:
       tags:
         - posts
-      summary: Add a post on behalf of the specified user with the given text
+      summary: Creates a post for a user.
       operationId: addPost
-      description: Add a post on behalf of the specified user with the given text
+      description: Add a post on behalf of the specified user with the given text.
       requestBody:
         content:
           application/json:
@@ -110,9 +341,9 @@ paths:
           schema:
             type: boolean
             default: true
-      summary: Recover posts from the specified user
+      summary: Get posts made by a user.
       operationId: getPostsForUser
-      description: Recover posts from the specified user
+      description: Get the compilation of all the posts made by the specified user.
       responses:
         '200':
           description: List containing the posts, sorted according what is specified
@@ -151,9 +382,9 @@ paths:
     delete:
       tags:
         - posts
-      summary: Delete a specified post given its unique Id
+      summary: Delete a post.
       operationId: deletePost
-      description: Delete a specified post given its unique Id
+      description: Delete a specified post given its unique Id.
       responses:
         '204':
           description: Process ended without errors
@@ -172,9 +403,9 @@ paths:
     get:
       tags:
         - posts
-      summary: Retrieves a post given a specified ID
+      summary: Retrieves a post.
       operationId: getPost
-      description: Retrieves a post given a specified ID
+      description: Retrieves a post given a specified ID.
       responses:
         '200':
           description: Process ended without errors
